<resources>
    <string name="app_name">AIM</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Audio Collector settings -->
    <string name="pref_header_audio_collector">Audio Collector</string>

    <string name="pref_title_buffer_size">Buffer size</string>
    <string name="pref_buffer_size_key">buffer_size</string>
    <string name="pref_buffer_size_default_value">2000</string>

    <string name="pref_title_chunk_size">Chunk size</string>
    <string name="pref_chunk_size_key">chunk_size</string>
    <string name="pref_chunk_size_default_value">1000</string>

    <string name="pref_title_frame_length">Frame length</string>
    <string name="pref_frame_length_key">frame_length</string>
    <string name="pref_frame_length_default_value">5000</string>

    <!-- File Remover settings -->
    <string name="pref_header_file_remover">File Remover</string>

    <string name="pref_title_remove_period">File removal period</string>
    <string name="pref_remove_period_key">remove_period</string>
    <string name="pref_remove_period_default_value">5</string>

    <string name="pref_title_keep_files">Files to keep</string>
    <string name="pref_keep_files_key">keep_files</string>
    <string name="pref_keep_files_default_value">10</string>

    <!-- Audio Encoder settings -->
    <string name="pref_header_audio_encoder">Audio Encoder</string>

    <string name="pref_title_file_prefix">Audio file prefix</string>
    <string name="pref_file_prefix_key">file_prefix</string>
    <string name="pref_file_prefix_default_value">AudioCollector</string>

    <string name="pref_title_format_type">Format type</string>
    <string name="pref_format_type_key">format_type</string>
    <string name="pref_format_type_default_value">audio/mp4a-latm</string>

    <string name="pref_title_bit_rate">Bit rate</string>
    <string name="pref_bit_rate_key">bit_rate</string>
    <string name="pref_bit_rate_default_value">256000</string>

    <string name="pref_title_encoder_buffer_size">Encoder buffer size</string>
    <string name="pref_encoder_buffer_size_key">encoder_buffersize</string>
    <string name="pref_encoder_buffer_size_default_value">16384</string>

    <!-- Cloud settings -->
    <string name="pref_header_cloud">Cloud</string>

    <string name="pref_title_mqtt_client_id_prefix">MQTT client ID prefix</string>
    <string name="pref_mqtt_client_id_prefix_key">mqtt_client_id_prefix</string>
    <string name="pref_mqtt_client_id_prefix_default_value">hacker</string>

    <string name="pref_title_mqtt_server_uri">MQTT server URI</string>
    <string name="pref_mqtt_server_uri_key">mqtt_server_uri</string>
    <string name="pref_mqtt_server_uri_default_value">tcp://msggwt1.service.deutschebahn.com:1860</string>

    <string name="pref_title_topic_level_principal">Topic level principal</string>
    <string name="pref_topic_level_principal_key">topic_level_principal</string>
    <string name="pref_topic_level_principal_default_value">HACKER</string>

    <string name="pref_title_topic_level_application">Topic level application</string>
    <string name="pref_topic_level_application_key">topic_level_application</string>
    <string name="pref_topic_level_application_default_value">AIM_PROTOTYPE</string>

    <string name="pref_title_topic_level_component_audio">Topic level component audio</string>
    <string name="pref_topic_level_component_audio_key">topic_level_component_audio</string>
    <string name="pref_topic_level_component_audio_default_value">AUDIO</string>

    <string name="pref_title_audio_publish_period">Audio publish period</string>
    <string name="pref_audio_publish_period_key">audio_publish_period</string>
    <string name="pref_audio_publish_period_default_value">300</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
