<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="@string/pref_mqtt_client_id_prefix_default_value"
        android:inputType="text"
        android:key="@string/pref_mqtt_client_id_prefix_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_mqtt_client_id_prefix" />
    <EditTextPreference
        android:defaultValue="@string/pref_mqtt_server_uri_default_value"
        android:inputType="text"
        android:key="@string/pref_mqtt_server_uri_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_mqtt_server_uri" />
    <EditTextPreference
        android:defaultValue="@string/pref_topic_level_principal_default_value"
        android:inputType="text"
        android:key="@string/pref_topic_level_principal_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_topic_level_principal" />
    <EditTextPreference
        android:defaultValue="@string/pref_topic_level_application_default_value"
        android:inputType="text"
        android:key="@string/pref_topic_level_application_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_topic_level_application" />
    <EditTextPreference
        android:defaultValue="@string/pref_topic_level_component_audio_default_value"
        android:inputType="text"
        android:key="@string/pref_topic_level_component_audio_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_topic_level_component_audio" />
    <ListPreference
        android:defaultValue="@string/pref_audio_publish_period_default_value"
        android:entries="@array/pref_audio_publish_period_titles"
        android:entryValues="@array/pref_audio_publish_period_values"
        android:key="@string/pref_audio_publish_period_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_audio_publish_period" />
</PreferenceScreen>
