<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="@string/pref_default_file_prefix"
        android:inputType="text"
        android:key="@string/pref_file_prefix_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_file_prefix" />
    <ListPreference
        android:defaultValue="@string/pref_remove_period_default_value"
        android:entries="@array/pref_remove_period_titles"
        android:entryValues="@array/pref_remove_period_values"
        android:key="@string/pref_remove_period_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_remove_period" />
    <ListPreference
        android:defaultValue="@string/pref_keep_files_default_value"
        android:entries="@array/pref_keep_files_titles"
        android:entryValues="@array/pref_keep_files_values"
        android:key="@string/pref_keep_files_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_keep_files" />
</PreferenceScreen>
