<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="@string/pref_format_type_default_value"
        android:entries="@array/pref_format_type_titles"
        android:entryValues="@array/pref_format_type_values"
        android:key="@string/pref_format_type_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_format_type" />
    <ListPreference
        android:defaultValue="@string/pref_bit_rate_default_value"
        android:entries="@array/pref_bit_rate_titles"
        android:entryValues="@array/pref_bit_rate_values"
        android:key="@string/pref_bit_rate_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_bit_rate" />
</PreferenceScreen>
