<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="de.db.aim.SettingsActivity$AudioCollectorPreferenceFragment"
        android:icon="@drawable/ic_mic_black_24dp"
        android:title="@string/pref_header_audio_collector" />
    <header
        android:fragment="de.db.aim.SettingsActivity$AudioEncoderPreferenceFragment"
        android:icon="@drawable/ic_transform_black_24dp"
        android:title="@string/pref_header_audio_encoder" />
    <header
        android:fragment="de.db.aim.SettingsActivity$FileRemoverPreferenceFragment"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/pref_header_file_remover" />
    <header
        android:fragment="de.db.aim.SettingsActivity$CloudPreferenceFragment"
        android:icon="@drawable/ic_cloud_black_24dp"
        android:title="@string/pref_header_cloud" />
</preference-headers>
