<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@integer/pref_buffer_size_default_value"
        android:inputType="number"
        android:key="buffer_size"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_buffer_size" />
    <EditTextPreference
        android:defaultValue="@integer/pref_chunk_size_default_value"
        android:inputType="number"
        android:key="chunk_size"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_chunk_size" />
    <EditTextPreference
        android:defaultValue="@integer/pref_frame_length_default_value"
        android:inputType="number"
        android:key="frame_length"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_frame_length" />

</PreferenceScreen>
